# mate

./: .clippy.toml  .gitignore  CI_TEST_FIXES.md  Cargo.toml  Makefile  README.md  test_board
.github/: README.md
.github/workflows/: ci.yml  test.yml
scripts/: check.sh  debug_ci_env.sh  replicate_ci_env.sh  test_ci_failures.sh
src/: lib.rs  main.rs
src/chess/: board.rs  error.rs  mod.rs  moves.rs  piece.rs  position.rs
src/cli/: app.rs  commands.rs  display.rs  error_handler.rs  game_ops.rs  mod.rs  network_manager.rs  validation.rs
src/crypto/: identity.rs  mod.rs  storage.rs
src/messages/: chess.rs  mod.rs  types.rs  wire.rs
src/network/: client.rs  connection.rs  mod.rs  server.rs
src/storage/: database.rs  errors.rs  games.rs  messages.rs  mod.rs  models.rs  schema.rs
tests/: README.md  TESTS_README.md  configuration_flexibility_tests.rs  cross_platform_compatibility_tests.rs  dos_protection_tests.rs  error_handling_tests.rs  message_types_integration.rs  messages_integration.rs  mod.rs  network_interruption_tests.rs  performance_resource_tests.rs  timeout_handling_tests.rs  wire_protocol_tests.rs  wire_unit_tests.rs
tests/common/: ci_utils.rs  mock_streams.rs  mod.rs  port_utils.rs  test_data.rs  test_helpers.rs
tests/integration/: chess_board_integration.rs  chess_engine_messages.rs  chess_error_consistency.rs  chess_protocol_advanced.rs  chess_protocol_core.rs  chess_security_integration.rs  chess_storage_integration.rs  cli_app_lifecycle.rs  cli_commands.rs  cli_database.rs  cli_error_handling.rs  cli_network.rs  cli_tests.rs  connection_core.rs  connection_recovery.rs  edge_cases_boundaries.rs  error_handling.rs  integration_tests.rs  interactive_commands.rs  interactive_initialization.rs  interactive_input_handling.rs  interactive_message_exchange.rs  mod.rs  (+3 more)
(+49 files in other folders)
