[package]
name = "mate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"