[package]
name = "mate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mate"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
directories = "5.0"
thiserror = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
sha2 = "0.10.9"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
regex = "1.0"
